@@ -385,13 +385,14 @@ condition|(
 name|indexedId
 operator|!=
 literal|null
+operator|&&
+name|sf
+operator|!=
+literal|null
 condition|)
 block|{
 return|return
-name|schema
-operator|.
-name|getUniqueKeyField
-argument_list|()
+name|sf
 operator|.
 name|getType
 argument_list|()
@@ -421,6 +422,10 @@ block|}
 if|if
 condition|(
 name|solrDoc
+operator|!=
+literal|null
+operator|&&
+name|sf
 operator|!=
 literal|null
 condition|)
