@@ -179,8 +179,26 @@ operator|.
 name|RollbackUpdateCommand
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
 begin_comment
-comment|/**  * A logging processor.  This keeps track of all commands that have passed through  * the chain and prints them on finish();  *   * If the Log level is not INFO the processor will not be created or added to the chain  *   * @since solr 1.3  */
+comment|/**  * A logging processor.  This keeps track of all commands that have passed through  * the chain and prints them on finish().  At the Debug (FINE) level, a message  * will be logged for each command prior to the next stage in the chain.  *   * If the Log level is not>= INFO the processor will not be created or added to the chain.  *   * @since solr 1.3  */
 end_comment
 begin_class
 DECL|class|LogUpdateProcessorFactory
@@ -255,12 +273,23 @@ name|UpdateRequestProcessor
 name|next
 parameter_list|)
 block|{
+specifier|final
+name|Logger
+name|logger
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|LogUpdateProcessor
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 name|boolean
 name|doLog
 init|=
-name|LogUpdateProcessor
-operator|.
-name|log
+name|logger
 operator|.
 name|isInfoEnabled
 argument_list|()
@@ -272,7 +301,10 @@ name|doLog
 condition|)
 block|{
 comment|// only create the log processor if we will use it
-return|return
+specifier|final
+name|LogUpdateProcessor
+name|processor
+init|=
 operator|new
 name|LogUpdateProcessor
 argument_list|(
@@ -284,6 +316,16 @@ name|this
 argument_list|,
 name|next
 argument_list|)
+decl_stmt|;
+assert|assert
+name|processor
+operator|.
+name|log
+operator|==
+name|logger
+assert|;
+return|return
+name|processor
 return|;
 block|}
 return|return
@@ -351,6 +393,18 @@ specifier|final
 name|int
 name|maxNumToLog
 decl_stmt|;
+DECL|field|logDebug
+specifier|private
+specifier|final
+name|boolean
+name|logDebug
+init|=
+name|log
+operator|.
+name|isDebugEnabled
+argument_list|()
+decl_stmt|;
+comment|//cache to avoid volatile-read
 DECL|method|LogUpdateProcessor
 specifier|public
 name|LogUpdateProcessor
@@ -419,19 +473,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-name|next
-operator|!=
-literal|null
-condition|)
-name|next
-operator|.
-name|processAdd
-argument_list|(
-name|cmd
-argument_list|)
-expr_stmt|;
 comment|// Add a list of added id's to the response
 if|if
 condition|(
@@ -485,8 +526,44 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|logDebug
+condition|)
+block|{
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"add {}"
+argument_list|,
+name|cmd
+operator|.
+name|getPrintableId
+argument_list|(
+name|req
+operator|.
+name|getSchema
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 name|numAdds
 operator|++
+expr_stmt|;
+if|if
+condition|(
+name|next
+operator|!=
+literal|null
+condition|)
+name|next
+operator|.
+name|processAdd
+argument_list|(
+name|cmd
+argument_list|)
 expr_stmt|;
 block|}
 annotation|@
@@ -502,19 +579,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-name|next
-operator|!=
-literal|null
-condition|)
-name|next
-operator|.
-name|processDelete
-argument_list|(
-name|cmd
-argument_list|)
-expr_stmt|;
 if|if
 condition|(
 name|cmd
@@ -570,6 +634,23 @@ name|id
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|logDebug
+condition|)
+block|{
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"delete {}"
+argument_list|,
+name|cmd
+operator|.
+name|id
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 else|else
 block|{
@@ -595,9 +676,39 @@ name|query
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|logDebug
+condition|)
+block|{
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"deleteByQuery {}"
+argument_list|,
+name|cmd
+operator|.
+name|query
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 name|numDeletes
 operator|++
+expr_stmt|;
+if|if
+condition|(
+name|next
+operator|!=
+literal|null
+condition|)
+name|next
+operator|.
+name|processDelete
+argument_list|(
+name|cmd
+argument_list|)
 expr_stmt|;
 block|}
 annotation|@
@@ -613,6 +724,36 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|toLog
+operator|.
+name|add
+argument_list|(
+literal|"mergeIndexes"
+argument_list|,
+name|cmd
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|logDebug
+condition|)
+block|{
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"mergeIndexes {}"
+argument_list|,
+name|cmd
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|next
@@ -624,18 +765,6 @@ operator|.
 name|processMergeIndexes
 argument_list|(
 name|cmd
-argument_list|)
-expr_stmt|;
-name|toLog
-operator|.
-name|add
-argument_list|(
-literal|"mergeIndexes"
-argument_list|,
-name|cmd
-operator|.
-name|toString
-argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -652,6 +781,40 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+specifier|final
+name|String
+name|msg
+init|=
+name|cmd
+operator|.
+name|optimize
+condition|?
+literal|"optimize"
+else|:
+literal|"commit"
+decl_stmt|;
+name|toLog
+operator|.
+name|add
+argument_list|(
+name|msg
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|logDebug
+condition|)
+block|{
+name|log
+operator|.
+name|debug
+argument_list|(
+name|msg
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|next
@@ -663,21 +826,6 @@ operator|.
 name|processCommit
 argument_list|(
 name|cmd
-argument_list|)
-expr_stmt|;
-name|toLog
-operator|.
-name|add
-argument_list|(
-name|cmd
-operator|.
-name|optimize
-condition|?
-literal|"optimize"
-else|:
-literal|"commit"
-argument_list|,
-literal|""
 argument_list|)
 expr_stmt|;
 block|}
@@ -695,6 +843,28 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|toLog
+operator|.
+name|add
+argument_list|(
+literal|"rollback"
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|logDebug
+condition|)
+block|{
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"rollback"
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|next
@@ -706,15 +876,6 @@ operator|.
 name|processRollback
 argument_list|(
 name|cmd
-argument_list|)
-expr_stmt|;
-name|toLog
-operator|.
-name|add
-argument_list|(
-literal|"rollback"
-argument_list|,
-literal|""
 argument_list|)
 expr_stmt|;
 block|}
@@ -739,6 +900,7 @@ operator|.
 name|finish
 argument_list|()
 expr_stmt|;
+comment|// LOG A SUMMARY WHEN ALL DONE (INFO LEVEL)
 comment|// TODO: right now, update requests are logged twice...
 comment|// this will slow down things compared to Solr 1.2
 comment|// we should have extra log info on the SolrQueryResponse, to
