@@ -120,7 +120,7 @@ name|UpdateRequestProcessor
 block|{
 DECL|field|log
 specifier|protected
-specifier|static
+specifier|final
 name|Logger
 name|log
 init|=
@@ -128,9 +128,8 @@ name|LoggerFactory
 operator|.
 name|getLogger
 argument_list|(
-name|UpdateRequestProcessor
-operator|.
-name|class
+name|getClass
+argument_list|()
 argument_list|)
 decl_stmt|;
 DECL|field|next
